fix: Fixed perk icon stretching

--- a/src/components/PerkBlock/style.scss
+++ b/src/components/PerkBlock/style.scss
@@ -3,6 +3,7 @@
 .perkInfo {
   display        : flex;
   justify-content: space-evenly;
+  align-items    : center;
 }
 
 .icon {
@@ -10,5 +11,5 @@
 }
 
 .effect {
-  width: 16em;
+  width: 20em;
 }
